hledger/test/errors/parseable-regexps.j
#!/usr/bin/env -S hledger check -f

alias /(/ = a
